--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.8.0",
     "@craco/craco": "^6.4.5",
+    "@gongdongho12/npm-usersave-api": "^1.0.0",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -37,11 +38,13 @@
     "axios-auth-refresh": "^3.2.1",
     "craco-antd": "^2.0.0",
     "craco-less": "^2.0.0",
+    "dotenv-cra": "^3.0.2",
     "less": "^4.1.2",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-intl": "^5.21.1",
+    "react-kakao-login": "^2.1.1",
     "react-morefinity": "^1.0.5",
     "react-router": "^6.6.1",
     "react-router-dom": "^6.6.1",
